@@ -15,7 +15,6 @@ import static java.lang.String.format;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -70,33 +69,30 @@ class DisableIfArgumentExtension implements InvocationInterceptor {
 	}
 
 	private static void checkRequiredAnnotations(Method testMethod) {
-		if (!AnnotationSupport.findAnnotation(testMethod, DisableIfAnyArgument.class).isPresent()
-				&& !AnnotationSupport.findAnnotation(testMethod, DisableIfAllArguments.class).isPresent()
+		if (AnnotationSupport.findAnnotation(testMethod, DisableIfAnyArgument.class).isEmpty()
+				&& AnnotationSupport.findAnnotation(testMethod, DisableIfAllArguments.class).isEmpty()
 				&& AnnotationSupport.findRepeatableAnnotations(testMethod, DisableIfArgument.class).isEmpty()) {
 			throw new ExtensionConfigurationException(
 				"Required at least one of the following: @DisableIfArgument, @DisableIfAllArguments, @DisableIfAnyArgument but found none.");
 		}
 	}
 
-	private static DisableIfAllArguments verifyNonEmptyInputs(DisableIfAllArguments annotation) {
+	private static void verifyNonEmptyInputs(DisableIfAllArguments annotation) {
 		if (annotation.contains().length > 0 == annotation.matches().length > 0)
 			throw invalidInputs(DisableIfAllArguments.class);
-		return annotation;
 	}
 
-	private static DisableIfAnyArgument verifyNonEmptyInputs(DisableIfAnyArgument annotation) {
+	private static void verifyNonEmptyInputs(DisableIfAnyArgument annotation) {
 		if (annotation.contains().length > 0 == annotation.matches().length > 0)
 			throw invalidInputs(DisableIfAnyArgument.class);
-		return annotation;
 	}
 
-	private static DisableIfArgument verifyNonEmptyInputs(DisableIfArgument annotation) {
+	private static void verifyNonEmptyInputs(DisableIfArgument annotation) {
 		if (annotation.contains().length > 0 == annotation.matches().length > 0)
 			throw invalidInputs(DisableIfArgument.class);
-		return annotation;
 	}
 
-	private static RuntimeException invalidInputs(Class<?> annotationClass) {
+	private static ExtensionConfigurationException invalidInputs(Class<?> annotationClass) {
 		return new ExtensionConfigurationException(
 			format("%s requires that either `contains` or `matches` is set.", annotationClass.getSimpleName()));
 	}
@@ -164,7 +160,7 @@ class DisableIfArgumentExtension implements InvocationInterceptor {
 		}
 
 		static ArgumentChecker check(Object argument) {
-			return new ArgumentChecker(Collections.singletonList(argument), true);
+			return new ArgumentChecker(List.of(argument), true);
 		}
 
 		public void matches(String[] matches) {
